# loggy

./: CMakeLists.txt  README.md  example.cpp
.github/workflows/: build.yml
src/: colors.h  formatter.cpp  formatter.h  log.h  log_level.h  logger.cpp  logger.h  loggy.h
